--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Contact section -->
         <section id="contact">
             <h2>Contact Me</h2>
-            <p><a href="mailto:emanuel.perez.va@">email</a></p>
+            <p><a href="mailto:emanuel.perez.va@gmail.com">email</a></p>
         </section>
     </main>
 
